# RayMarching

./: CMakeLists.txt
Config/: config.yaml
Source/: ConfigManager.cpp
Source/Geometry/: Mesh.cpp  Mesh.h
